--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ table th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #04AA6D;
+    /* background-color: #04AA6D; */
     color: white;
 }
 
