Convert token input to password for better privacy

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ table th {
 }
 
 
-input[type=text] {
+input[type=text], input[type=password], input[type=date], button {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
